# design_pattern_experimentation

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
libcommandpattern/: CMakeLists.txt  Makefile  cmake_install.cmake
libcommandpattern/include/: command_interface.hpp  command_move_backward.hpp  command_move_forward.hpp  command_move_left.hpp  command_move_right.hpp  command_null.hpp  invoker_interface.hpp  keyboard_invoker.hpp
libcommandpattern/source/: command_move_backward.cpp  command_move_forward.cpp  command_move_left.cpp  command_move_right.cpp  command_null.cpp  keyboard_invoker.cpp
libfactorypattern/: CMakeLists.txt  Makefile  cmake_install.cmake
libfactorypattern/include/: allegiance_interface.hpp  archer.hpp  armour_interface.hpp  axe_weapon.hpp  barracks_factory_interface.hpp  barracks_interface.hpp  bow_weapon.hpp  dark_allegiance.hpp  heavy_armour.hpp  horse_interface.hpp  human_barracks.hpp  human_factory.hpp  knight.hpp  light_allegiance.hpp  medium_armour.hpp  normal_horse.hpp  orc_barracks.hpp  orc_factory.hpp  skeleton_horse.hpp  soldier.hpp  sword_weapon.hpp  unit_interface.hpp  unit_types.hpp  weapon_interface.hpp
libfactorypattern/source/: archer.cpp  axe_weapon.cpp  bow_weapon.cpp  dark_allegiance.cpp  heavy_armour.cpp  human_barracks.cpp  human_factory.cpp  knight.cpp  light_allegiance.cpp  medium_armor.cpp  normal_horse.cpp  orc_barracks.cpp  orc_factory.cpp  skeleton_horse.cpp  soldier.cpp  sword_weapon.cpp
src/: main_test.cpp
